moving index out of folder

--- a/WebVisualizations/comparison.html
+++ b/WebVisualizations/comparison.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <!-- Adding Visualizations -->
-    <div class="container">
+    <div class="comp-container container">
         <div class = "row">
             <div class="col-md-12">
                 <h1 class="title-header">Comparison: Latitude vs X</h1>
@@ -54,21 +54,21 @@
         <div class = "row">
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>vs. Max Temperature</h2>
-                <img height=100% width=100% src="./Resources/assets/images/Fig1.png" alt="City Latitude vs Max Temp">
+                <a href="visualization_temp.html"><img height=100% width=100% src="./Resources/assets/images/Fig1.png" alt="City Latitude vs Max Temp"></a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>vs. Humidity</h2>
-                <img height=100% width=100% src="./Resources/assets/images/Fig2.png" alt="City Latitude vs Humidity">
+                <a href="visualizations_humidity.html"><img height=100% width=100% src="./Resources/assets/images/Fig2.png" alt="City Latitude vs Humidity"></a>
             </div>
         </div>
         <div class="row"></div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>vs. Cloudiness</h2>
-                <img height=100% width=100% src="./Resources/assets/images/Fig3.png" alt="City Latitude vs Cloudiness">
+                <a href="visualizations_cloudiness.html"><img height=100% width=100% src="./Resources/assets/images/Fig3.png" alt="City Latitude vs Cloudiness"></a>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2>vs. Wind Speed</h2>
-                <img height=100% width=100% src="./Resources/assets/images/Fig4.png" alt="City Latitude vs Wind Speed">
+                <a href="visualizations_wind.html"><img height=100% width=100% src="./Resources/assets/images/Fig4.png" alt="City Latitude vs Wind Speed"></a>
             </div> 
         </div>
         </div>
