init final commit

--- a/WebVisualizations/visualizations_cloudiness.html
+++ b/WebVisualizations/visualizations_cloudiness.html
@@ -53,12 +53,8 @@
                     <hr>
                     <img class="float-top" height="100%" width="100%" src="./Resources/assets/images/Fig3.png"
                         class="rounded float-left" alt="City Latitde vs Max Temp">
-                    <p class="description">As expected, the weather becomes significantly warmer as one approaches
-                        the equator (0 Deg Latitde). More interestingly, however, is the fact that the southern
-                        hemisphere
-                        tends to be warmer this time of the year than the northern hemisphere. This maybe due to the
-                        tilt of
-                        the earth at the time of the year this data was gathered.
+                    <p class="description">There is no conclusive correlation between latitude and cloudiness. This graph does not show if cloudiness
+                        increases or decreases as cities are farther or closer to the equator.
                     </p>
                 </div>
             </div>
