--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -78,21 +78,21 @@
                     <hr>
                     <div class="row">
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig1.png"
+                            <a href="visualization_temp.html"><img height=100% width=100% src="./Resources/assets/images/Fig1.png"></a>
                                 alt="City Latitude vs Max Temp">
                         </div>
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig2.png"
+                            <a href="visualizations_humidity.html"><img height=100% width=100% src="./Resources/assets/images/Fig2.png"></a>
                                 alt="City Latitude vs Humidity">
                         </div>
                     <!-- </div> -->
                     <!-- <div class="row"> -->
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig3.png"
+                            <a href="visualizations_cloudiness"><img height=100% width=100% src="./Resources/assets/images/Fig3.png"></a>
                                 alt="City Latitude vs Cloudiness">
                         </div>
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig4.png"
+                            <a href="visualizations_wind.html"><img height=100% width=100% src="./Resources/assets/images/Fig4.png"></a>
                                 alt="City Latitude vs Wind Speed">
                         </div>
                     <!-- </div> -->
