--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -88,7 +88,7 @@
                     <!-- </div> -->
                     <!-- <div class="row"> -->
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <a href="visualizations_cloudiness"><img height=100% width=100% src="./Resources/assets/images/Fig3.png"
+                            <a href="visualizations_cloudiness.html"><img height=100% width=100% src="./Resources/assets/images/Fig3.png"
                                 alt="City Latitude vs Cloudiness"></a>
                         </div>
                         <div class="col-lg-6 col-md-3 col-sm-3">
