--- a/WebVisualizations/visualizations_humidity.html
+++ b/WebVisualizations/visualizations_humidity.html
@@ -64,20 +64,22 @@
                     <hr>
                     <div class="row">
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig1.png"
-                                alt="City Latitude vs Max Temp">
+                            <a href="visualization_temp.html"><img height=100% width=100% src="./Resources/assets/images/Fig1.png"
+                                alt="City Latitude vs Max Temp"></a>
                         </div>
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig2.png"
-                                alt="City Latitude vs Humidity">
+                            <a href="visualizations_humidity.html"><img height=100% width=100% src="./Resources/assets/images/Fig2.png"
+                                alt="City Latitude vs Humidity"></a>
+                        </div>
+                    <!-- </div> -->
+                    <!-- <div class="row"> -->
+                        <div class="col-lg-6 col-md-3 col-sm-3">
+                            <a href="visualizations_cloudiness.html"><img height=100% width=100% src="./Resources/assets/images/Fig3.png"
+                                alt="City Latitude vs Cloudiness"></a>
                         </div>
                         <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig3.png"
-                                alt="City Latitude vs Cloudiness">
-                        </div>
-                        <div class="col-lg-6 col-md-3 col-sm-3">
-                            <img height=100% width=100% src="./Resources/assets/images/Fig4.png"
-                                alt="City Latitude vs Wind Speed">
+                            <a href="visualizations_wind.html"><img height=100% width=100% src="./Resources/assets/images/Fig4.png"
+                                alt="City Latitude vs Wind Speed"></a>
                         </div>
                     </div>
                 </div>
